feat: add snowflake plugin